@@ -1,8 +1,10 @@
 DIST pclean-0.3.tar.bz2 10558 RMD160 dff3de954602960e2489be1b472760ff9bd25be4 SHA1 454187d2ce8ef00502ba13ffd00faa93f639be26 SHA256 1fb9cf855b8ccdad8cdfd783c7b9d167887ec76a4158a9fa19272099d4d56866
 DIST pclean-0.4.tar.bz2 10606 RMD160 1f9bf9c1db09c41a7e54c78b8bd4c5b0e0c2e1d2 SHA1 9222449d3d0dbb7457c4a03ec3ec8ffcd0f37258 SHA256 dfcb129b41b5337c2cebf7952ac934244ba198e4a375218a7649445adc9bbff2
 DIST pclean-0.5.tar.bz2 10686 RMD160 9ab7fb94ddb4446bde09b9261c317d1a2908c123 SHA1 dc865a866b9f4afc68732b3fce90d97aa67457d7 SHA256 4075f49bf6d4795d4f8a8dc8eabd59dacd8765b81644f8f5ee1219ee71eb8fcc
+DIST pclean-0.6.tar.bz2 10762 RMD160 bddb5a043156f32af1050683eb983f63309b6607 SHA1 a09621c4c93564b9cd265dac9d823b4fd57581f8 SHA256 f8a9d32adf024638ebc2b5211908e2c8528f5c25a65433b17710fdb9133c3126
 EBUILD pclean-0.3.ebuild 686 RMD160 3c029e79d7c903720631a79ba88939f16ee4e8e5 SHA1 e260956a25fde9034766a41c4649946c6475b0d6 SHA256 dbbdfe26b5d33eb80a46ee24d40ef1bb34df7790df908c45196191a471d2d81d
 EBUILD pclean-0.4.ebuild 686 RMD160 3c029e79d7c903720631a79ba88939f16ee4e8e5 SHA1 e260956a25fde9034766a41c4649946c6475b0d6 SHA256 dbbdfe26b5d33eb80a46ee24d40ef1bb34df7790df908c45196191a471d2d81d
 EBUILD pclean-0.5.ebuild 686 RMD160 3c029e79d7c903720631a79ba88939f16ee4e8e5 SHA1 e260956a25fde9034766a41c4649946c6475b0d6 SHA256 dbbdfe26b5d33eb80a46ee24d40ef1bb34df7790df908c45196191a471d2d81d
-MISC ChangeLog 342 RMD160 884ea8281e750b3530199290e3cbdffc431389eb SHA1 246690d145480cc9ebb66f051b86ca8cffba2ad7 SHA256 21f2785ceba7ac464e33e9acc9ecd3291267aaa68129cd93942958f06ea75c35
+EBUILD pclean-0.6.ebuild 686 RMD160 3c029e79d7c903720631a79ba88939f16ee4e8e5 SHA1 e260956a25fde9034766a41c4649946c6475b0d6 SHA256 dbbdfe26b5d33eb80a46ee24d40ef1bb34df7790df908c45196191a471d2d81d
+MISC ChangeLog 447 RMD160 c78ba3df04fdeb1b27521e0477e0764ef38000fc SHA1 b52c10573618908a74a3ad891728ce9709b0e582 SHA256 435a2e0cbfafc35f65dbf97a09e709b585154cfa57031095d546e5e1cf76f28b
 MISC metadata.xml 299 RMD160 100c4374c3be1b0f7f5471dd57b659d3fc6c4eed SHA1 01b95381417d2dce7668a8aab425daee94550186 SHA256 d8e113548c5c418f482af3e1a1b89b2408e2377ece82ae9b6ae46e60d21704d2
