@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pclean-0.6 (07 Oct 2010)
+
+  07 Oct 2010; <alunduil@gentoo.org> +pclean-0.6.ebuild:
+  Adding pclean-0.6
+
 *pclean-0.5 (26 Aug 2010)
 
   26 Aug 2010; <alunduil@gentoo.org> +pclean-0.5.ebuild:
